# fraud_detection_bank

./: .gitignore  README.MD  pyproject.toml
fraud_detection_bank.egg-info/: PKG-INFO  SOURCES.txt
notebooks/: analise_exploratoria.ipynb  comparacao_modelos.ipynb  conhecendo_dados.ipynb  pre_processamento.ipynb  resultados.ipynb
src/: config.py  data_loader.py  metrics.py  models.py  pipeline.py  preprocessing.py  report.py  visualization.py
